--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>children-react16</title>
     <style>
+      @charset "UTF-8";
       #react16 {
         color: red;
       }
@@ -27,6 +28,10 @@
       console.log(6666666, this)
     </script> -->
     <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/facefont.css"> -->
+    <style>
+      @keyframes Ws6lWOlzL1N2S94UzmO5hg\=\={0%{transform:scaleY(1);transform-origin:0 0;opacity:1}to{transform:scaleY(.8);transform-origin:0 0;opacity:0}}
+    </style>
+    <!-- <link rel="stylesheet" href="https://static.rokidcdn.com/test/ar-independent/0.0.2/static/css/2.846bef85.chunk.css"> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
