fix(scopecss): Fixed bug of scopescss when @keyframes name has special characters

--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -28,8 +28,13 @@
       console.log(6666666, this)
     </script> -->
     <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/facefont.css"> -->
-    <style>
-      @keyframes Ws6lWOlzL1N2S94UzmO5hg\=\={0%{transform:scaleY(1);transform-origin:0 0;opacity:1}to{transform:scaleY(.8);transform-origin:0 0;opacity:0}}
+    <style type="text/css">
+      /* @charset "UTF-8"; */
+      @keyframes Ws6lWOlzL1N2S94_Uz\+mO-5hg\=\=/*sdf*/ {0%{transform:scaleY(1);transform-origin:0 0;opacity:1}to{transform:scaleY(.8);transform-origin:0 0;opacity:0}}
+
+      .S94UzmO5hg\=\={
+        color:#fff;
+      }
     </style>
     <!-- <link rel="stylesheet" href="https://static.rokidcdn.com/test/ar-independent/0.0.2/static/css/2.846bef85.chunk.css"> -->
   </head>
