--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -17,9 +17,9 @@
         color: red;
       }
     </style>
-    <!-- <script type='module'>
+    <script type='module'>
       console.log('inline module script')
-    </script> -->
+    </script>
     <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/test.css" global>
     <link rel="stylesheet" href="http://127.0.0.1:8080/test.css?a=1" global>
     <link rel="stylesheet" href="http://127.0.0.1:8080/large.css"> -->
