--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -17,8 +17,11 @@
         color: red;
       }
     </style>
-    <script type='module'>
+    <script type='module' class="module">
       console.log('inline module script')
+    </script>
+    <script id="test-id">
+      console.log('测试script带有id时的处理逻辑')
     </script>
     <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/test.css" global>
     <link rel="stylesheet" href="http://127.0.0.1:8080/test.css?a=1" global>
