--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -26,7 +26,12 @@
     <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/test.css" global>
     <link rel="stylesheet" href="http://127.0.0.1:8080/test.css?a=1" global>
     <link rel="stylesheet" href="http://127.0.0.1:8080/large.css"> -->
-    <!-- <script defer src="http://127.0.0.1:8080/test.js"></script> -->
+    <script defer src="http://127.0.0.1:8080/js/defer.js"></script>
+    <script async src="http://127.0.0.1:8080/js/async.js"></script>
+    <script type='module' src="http://127.0.0.1:8080/js/module.js"></script>
+    <script pure src="http://127.0.0.1:8080/js/pure.js"></script>
+    <script inline src="http://127.0.0.1:8080/js/inline.js"></script>
+    <script src="http://127.0.0.1:8080/js/test.js"></script>
     <!-- <script>
       console.log(6666666, this)
     </script> -->
