feat: Optimized source/link code

--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="http://127.0.0.1:8080/test.css">
     <link rel="stylesheet" href="http://127.0.0.1:8080/test.css?a=1">
     <link rel="stylesheet" href="http://127.0.0.1:8080/large.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8080/facefont.css">
     <script defer src="http://127.0.0.1:8080/js/defer.js"></script>
     <script async src="http://127.0.0.1:8080/js/async.js"></script>
     <script type='module' src="http://127.0.0.1:8080/js/module.js"></script>
