chore: update version

--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -24,7 +24,7 @@
       console.log('测试script带有id时的处理逻辑')
     </script>
 
-    <link rel="stylesheet" href="http://127.0.0.1:8080/test.css">
+    <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/test.css">
     <link rel="stylesheet" href="http://127.0.0.1:8080/large.css">
     <link rel="stylesheet" href="http://127.0.0.1:8080/facefont.css">
     <script defer src="http://127.0.0.1:8080/js/defer.js"></script>
@@ -32,7 +32,7 @@
     <script type='module' src="http://127.0.0.1:8080/js/module.js"></script>
     <script pure src="http://127.0.0.1:8080/js/pure.js"></script>
     <script inline src="http://127.0.0.1:8080/js/inline.js"></script>
-    <script src="http://127.0.0.1:8080/js/test.js"></script>
+    <script src="http://127.0.0.1:8080/js/test.js"></script> -->
 
     <style type="text/css">
       /* @charset "UTF-8"; */
