feat: Further optimize renderapp method

--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -49,6 +49,6 @@
     <div id="root"></div>
   </body>
   <script>
-    console.log('子应用react16的内联script')
+    console.log(`子应用${window.__MICRO_APP_NAME__}的内联script`)
   </script>
 </html>
