feat: update demo

--- a/dev/children/vite/index.html
+++ b/dev/children/vite/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <script>
-      console.log('common script in vite')
+      console.log('普通的内联script元素', window)
 
       window.addEventListener('popstate', (e) => {
         console.log('子应用 popstate', 'state:', e.state)
