--- a/dev/children/vite2/index.html
+++ b/dev/children/vite2/index.html
@@ -17,7 +17,7 @@
     </script> -->
   </head>
   <body>
-    <div id="vite-app"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
