--- a/dev/children/vue2/public/index.html
+++ b/dev/children/vue2/public/index.html
@@ -10,6 +10,9 @@
     <!-- <script src='http://127.0.0.1:8080/test.js' global></script> -->
     <!-- <link rel="stylesheet" href="<%= BASE_URL %>layui/css/layui.css" />
     <script src="<%= BASE_URL %>layui/layui.js"></script> -->
+    <script>
+      console.log('Vue', Vue, "Vue" in window)
+    </script>
   </head>
   <body>
     <noscript>
