fix(1.0.0-rc.2): fix error of get script by getElementsByTagName in iframe sandbox

--- a/dev/children/vue2/public/index.html
+++ b/dev/children/vue2/public/index.html
@@ -11,7 +11,11 @@
     <!-- <link rel="stylesheet" href="<%= BASE_URL %>layui/css/layui.css" />
     <script src="<%= BASE_URL %>layui/layui.js"></script> -->
     <script>
-      console.log('Vue', Vue, "Vue" in window)
+      try {
+        console.log('Vue', Vue, "Vue" in window)
+      } catch (e) {
+        console.log(e)
+      }
     </script>
   </head>
   <body>
