fix(1.0.0-rc.2): fix error of nest app

--- a/dev/children/vue2/public/index.html
+++ b/dev/children/vue2/public/index.html
@@ -13,9 +13,15 @@
     <script>
       try {
         console.log('Vue', Vue, "Vue" in window)
+        ;eval('console.log("html自带script的eval", window)')
       } catch (e) {
         console.log(e)
       }
+      // setTimeout(() => {
+      //   const dynamicScript = document.createElement('script')
+      //   dynamicScript.textContent = `eval('console.log("动态创建的script的eval", window)')`
+      //   document.body.appendChild(dynamicScript)
+      // }, 3000);
     </script>
   </head>
   <body>
