feat(1.0.0-rc.4): Optimized iframe sandbox support for plugin system escapeProperties

--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -21,6 +21,7 @@
       console.log('inline module script')
     </script>
     <script id="test-id">
+      console.assert(escapeKey3 !== undefined, 'window.escapeKey3 兜底到主应用，主应用存在该值，不为undefined')
       console.log('测试script带有id时的处理逻辑')
     </script>
 
