feat(1.0.0-rc.4): upgrade virtual routing system of disable memory router

--- a/dev/children/react16/public/index.html
+++ b/dev/children/react16/public/index.html
@@ -34,6 +34,7 @@
     <script pure src="http://127.0.0.1:8080/js/pure.js"></script>
     <script inline src="http://127.0.0.1:8080/js/inline.js"></script>
     <script src="http://127.0.0.1:8080/js/test.js"></script> -->
+    <!-- <link rel="stylesheet" href="http://127.0.0.1:8080/index-dd7602f4.css"> -->
 
     <style type="text/css">
       /* @charset "UTF-8"; */
